# bewerbungs-agent

./: .env.example  .gitignore  ANLEITUNG_SCHRITT_FÜR_SCHRITT.md  ARCHITECTURE.md  BEFEHLE_ZUSAMMENFASSUNG.txt  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCHNELLSTART.md  SECURITY.md  TEST_ANLEITUNG.md  TEST_RESULTS.txt  TEST_SUMMARY.md  USAGE.md  USAGE_EXAMPLES.md  config.example.yaml  config.yaml  demo.py  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.sh
agent/: attachment_handler.py  classifier.py  gmail_client.py  logger.py  main.py  task_manager.py
bewerbungs_agent/: __init__.py  agent.py  attachment_handler.py  classifier.py  gmail_service.py
src/bewerbungs_agent/: __init__.py  agent.py  agent_team.py  attachment_processor.py  classifier.py  config.py  email_parser.py  gmail_client.py  logger.py
src/bewerbungs_agent/cli/: __init__.py
src/bewerbungs_agent/models/: __init__.py
src/bewerbungs_agent/services/: __init__.py  application_service.py  document_service.py  gmail_service.py  job_service.py  stripe_service.py  user_service.py
src/bewerbungs_agent/utils/: __init__.py  config.py  database.py
tests/: __init__.py  test_agent.py  test_agent_team.py  test_attachment_processor.py  test_classifier.py  test_config.py  test_email_parser.py
tests/unit/: test_application_service.py  test_document_service.py  test_user_service.py
